--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             <div class="container">
                 <div class="row">
                     <div class="span12 centered">
-                        <h2>Who all make this?</h2> 
+                        <h2>We hope you enjoy our project</h2> 
                     </div>
                 </div>
                 <div class="row">
                     <div class="span12 centered">
-                        <p class="subtittle" >Students at the Flatiron School @gitname @gitname @gitname @gitname @gitname</p> 
+                        <p class="subtittle">Students at the Flatiron School. Submit a pull request if you see something that needs some love.@gitname @gitname @gitname @gitname @gitname</p> 
                     </div>
                 </div>
             </div>
@@ -129,14 +129,19 @@
         </footer>
         <!-- END FOOTER  --> 
         <!-- JAVA SCRIPTS  --> 
+      
         <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
         <script src="js/modernizr.custom.js" type="text/javascript" ></script> 
         <script src="js/jquery.scrollto.js"></script>
         <script src="js/waypoints.min.js" type="text/javascript"></script>
+        <script src="js/jquery.tweet.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
         <script src="js/bootstrap.js"></script>
         <script src="js/jquery.flexslider.js"></script>
+        <script src="js/jquery.fancybox.pack.js" type="text/javascript" ></script>
+        <script src="js/jquery.fancybox-media.js?v=1.0.0" type="text/javascript"></script>
          <script src="js/retina.js"></script>
+
         <!--     
         *************** RETINA JS FUNCTIONALITY   ****************
         
