--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="span12 centered">
 						<p class="subtittle" >Developers spend a lot of time on in the terminal. We make a lot of cool alias's and functions to help us move around the computer.</p>
-                        <p class="subtittle">But what if someone spills coffee on your laptop and you need to use a spare? Or if you need to drive on a different machine while pairing?</p>
+                        <p class="subtittle">But what if someone spills coffee on your laptop and you need to use a spare? Or if you need to drive on a different machine while pairing? Wouldn't you want your shortcuts to work while you drive?</p>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span12 centered">
-                        <h2>We made dis gem called drive</h2> 
+                        <h2>We made a gem called Drive</h2> 
                     </div>
                 </div>
                 <div class="row">
@@ -130,16 +130,18 @@
         <!-- END FOOTER  --> 
         <!-- JAVA SCRIPTS  --> 
       
-    <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-    <script src="js/modernizr.custom.js" type="text/javascript" ></script> 
+        <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+        <script src="js/modernizr.custom.js" type="text/javascript" ></script> 
+        <script src="js/jquery.scrollto.js"></script>
+        <script src="js/waypoints.min.js" type="text/javascript"></script>
+        <script src="js/jquery.tweet.js" type="text/javascript"></script>
+        <script src="js/custom.js" type="text/javascript"></script>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/jquery.flexslider.js"></script>
+        <script src="js/jquery.fancybox.pack.js" type="text/javascript" ></script>
+        <script src="js/jquery.fancybox-media.js?v=1.0.0" type="text/javascript"></script>
+         <script src="js/retina.js"></script>
 
-
-    <script src="js/jquery.scrollto.js"></script>
-    <script src="js/waypoints.min.js" type="text/javascript"></script>
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.flexslider.js"></script>
-     <script src="js/retina.js"></script>
 
         <!--     
         *************** RETINA JS FUNCTIONALITY   ****************
