--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 </div>
                 <div class="row">
                     <div class="span12 centered">
-                        <p class="subtittle">Students at the Flatiron School. Submit a pull request if you see something that needs some love.@gitname @gitname @gitname @gitname @gitname</p> 
+                        <p class="subtittle">Students at the Flatiron School. Submit a pull request if you see something that needs some love.
+                        Thank you!<br>
+                        @gitname @gitname @gitname @gitname @gitname</p> 
                     </div>
                 </div>
             </div>
