--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <div class="row">
                         <div class="span12">
                             <ul>
-                                <li><a href="#" target=_blank><i class="icon icon-twitter"></i></a></li>
-								<li><a href="#" target=_blank><i class="icon icon-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/FlatironSchool" target=_blank><i class="icon icon-twitter"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
